# 01-rcli

./: .gitignore  Cargo.toml  README.md  _typos.toml  cliff.toml  test.rest
fixtures/: b64.txt
src/: lib.rs  main.rs  opts.rs  process.rs
src/cli/: base64.rs  csv.rs  genpass.rs  http.rs  mod.rs  text.rs
src/process/: b64.rs  csv_convert.rs  gen_pass.rs  http_serve.rs  text.rs
src/utils/: mod.rs
