[package]
name = "rcli"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["shiina"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
csv = "1.3.1"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_yaml = "0.9.34"
