[package]
name = "rcli"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["shiina"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.99"
axum = { version = "0.8.4", features = ["http2", "query", "tracing"] }
base64 = "0.22.1"
blake3 = "1.8.2"
chacha20poly1305 = "=0.11.0-rc.1"
clap = { version = "4.5.45", features = ["derive"] }
csv = "1.3.1"
ed25519-dalek = { version = "3.0.0-pre.0", features = ["rand_core"] }
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_yaml = "0.9.34"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros", "net", "fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
zxcvbn = "3.1.0"
